--- a/java/res/values-ka/strings.xml
+++ b/java/res/values-ka/strings.xml
@@ -68,6 +68,10 @@
     <skip />
     <!-- no translation found for use_contacts_dict_summary (6599983334507879959) -->
     <skip />
+    <!-- no translation found for use_double_space_period (8781529969425082860) -->
+    <skip />
+    <!-- no translation found for use_double_space_period_summary (6532892187247952799) -->
+    <skip />
     <!-- no translation found for auto_cap (1719746674854628252) -->
     <skip />
     <!-- no translation found for auto_cap_summary (7934452761022946874) -->
