[AD1] Add an option to read an arbitrary dictionary.
Bug: 7702011
Change-Id: I76f52dd3fdb22824fc243ab3845ceec610469c81

--- a/java/res/values/strings.xml
+++ b/java/res/values/strings.xml
@@ -375,6 +375,8 @@
     <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration settings</string>
     <!-- Title of the settings for keypress sound volume -->
     <string name="prefs_keypress_sound_volume_settings">Keypress sound volume settings</string>
+    <!-- Title of the settings for reading an external dictionary file -->
+    <string name="prefs_read_external_dictionary">Read external dictionary file</string>
 
     <!-- Title of the button to revert to the default value of the device in the settings dialog [CHAR LIMIT=15] -->
     <string name="button_default">Default</string>
